Fix flick keyboard alignment using CSS Grid

--- a/public/style.css
+++ b/public/style.css
@@ -516,7 +516,7 @@ h2.section-title {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 0px;
+    margin-top: -10px;
     margin-bottom: 0px; /* 下のマージンを 0 に固定 */
 }
 
